clang/test/BSC/Positive/Driver/rewrite-bsc/Generic/rewrite_bsc_generic_14/rewrite_bsc_generic_14.cbs
// RUN: %clang -rewrite-bsc %s -o %t-rw.c
// RUN: FileCheck --input-file=%t-rw.c %s
// RUN: %clang %t-rw.c -o %t-rw.output
// RUN: %t-rw.output

safe void foo<T1, T2>(T1 a, T2 b)
{
    int c = a + b;
}

safe void foo<T1, T2>(T1 a, T2 b);

int main()
{
    foo<int, int>(1, 2);
    return 0;
}

// CHECK: static void foo_int_int(int a, int b);
// CHECK-EMPTY:
// CHECK-NEXT: int main(void) {
// CHECK-NEXT:     foo_int_int(1, 2);
// CHECK-NEXT:     return 0;
// CHECK-NEXT: }
// CHECK-EMPTY:
// CHECK-NEXT: static void foo_int_int(int a, int b) {
// CHECK-NEXT:     int c = a + b;
// CHECK-NEXT: }
